Prevents overflow

--- a/style.css
+++ b/style.css
@@ -300,6 +300,7 @@ body.show-emoji-picker em-emoji-picker {
 
     .chat-footer {
         height: 8%;
+        padding: 0.5em 0;
     }
 
     .chat-message {
